--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,13 +28,13 @@
         <h1 class="grid-6"><a href="/">PicTweet</a></h1>
         <% if user_signed_in? %>
           <div class="user_nav grid-6">
-            <% link_to "ログアウト", destroy_user_session_path, method: :delete %>
+            <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
             <a class="post" href="/tweets/new">投稿する</a>
           </div>
         <% else %>
           <div class="grid-6">
-            <% lnk_to "ログイン", new_user_session_path, class: 'post' %>
-            <% link_to "新規登録", new_user_registration_path, class: 'post' %>
+            <%= link_to "ログイン", new_user_session_path, class: 'post' %>
+            <%= link_to "新規登録", new_user_registration_path, class: 'post' %>
           </div>
         <% end %>
       </div>
