--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -2,5 +2,9 @@
     <p>
       <%= br(tweet.text) %>
     </p>
-    <span class="name"><%= tweet.name %></span>
+    <span class="name">
+      <a href="">
+      <span>投稿者</span><%= tweet.user.nickname %>
+     </a>
+    </span>
   </div>
