--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -1,4 +1,14 @@
 <div class="content_post" style="background-image: url(<%= tweet.image %>);">
+<% if user_signed_in? && current_user.id == tweet.user_id %>
+  <div class="more">
+  <span><%= image_tag 'arrow_top.png' %></span>
+    <ul>
+      <li>
+        <%= link_to '削除', "/tweets/#{tweet.id}" , method: :delete %>
+      </li>
+    </ul>
+  </div>
+  <% end %>
     <p>
       <%= br(tweet.text) %>
     </p>
