--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -2,11 +2,16 @@
 <% if user_signed_in? && current_user.id == tweet.user_id %>
   <div class="more">
   <span><%= image_tag 'arrow_top.png' %></span>
-    <ul>
-      <li>
-        <%= link_to '削除', "/tweets/#{tweet.id}" , method: :delete %>
-      </li>
-    </ul>
+    <div class="more_list">
+      <ul>
+        <li>
+          <%= link_to '編集', "/tweets/#{tweet.id}/edit" , method: :get %>
+        </li>
+        <li>
+          <%= link_to '削除', "/tweets/#{tweet.id}" , method: :delete %>
+        </li>
+      </ul>
+    </div>
   </div>
   <% end %>
     <p>
